# phishing_email_detector

./: .gitignore  LICENSE  README.md  data.py  environment.yml  pyproject.toml  requirements.txt  setup.py
src/: cli.py  exception.py  logger.py
src/components/: data_ingestion.py  data_transformation.py
src/phishing_email_detector/configs/: feedforward.yaml  rnn.yaml  transformer.yaml
src/phishing_email_detector/data/: preprocessing.py
src/phishing_email_detector/models/: base.py  feedforward.py  registry.py  rnn.py  transformer.py
src/phishing_email_detector/training/: evaluate.py  experiment.py
src/phishing_email_detector/utils/: config.py  logging.py  logging_setup.py  seeding.py
tests/: test_models.py
