[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-detector"
version = "0.1.0"
description = "Compare FNN, LSTM, and Transformer models for phishing email detection"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stefan Vassilev", email = "stevasvas@gmail.com"}
]
requires-python = ">=3.11"

dependencies = [
    "tensorflow==2.20.0",
    "tensorflow-hub==0.16.1",
    "pandas==2.3.3",
    "numpy==2.2.6",
    "kagglehub==0.3.13",
    "pydantic==2.12.5",
    "pyyaml==6.0.3",
    "tqdm==4.67.1",
    "click==8.3.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "ruff==0.1.11",
]

[project.scripts]
phishing-train = "phishing_detector.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
